
v1.2.2
-Add: Coloured quartz blocks
-Add: Soul Glass Brick
-Change: new textures Glow Box and Baseball Bat
-Add: Soul Glass Brick Stairs
-Add: Coloured quartz stairs
-Change: Glow Box hardness increased

v1.3
-Change: config for nether crops world gen
-Change: Soul Chest will eat any items that collide with it
-Added: Coloured Quartz Pillars
-Added: Reproducer
-Added: Silverfish Scales
-Added: Bat Wings, Cooked Bat Wings and Wolf Teeth
-Added: Blaze Amour, ingots and mesh

v1.4
-Change: New recipe for Reproducer
-Change: Blaze armour model and effects
-Added: Undertaker
-Added: Sceptre of Fire Charging
-Added: Sceptre of Lightning
-Change: New recipe for Sceptre of Concealment
-Added: Wither Shrub

v1.4.1
-Fix: SMP again
-Added: Living Soul
-Added: New items will spawn inside the undertaker

v1.5.0
-Added: Improved compatibility with Thaumcraft (all items have aspects, and cooking blaze mesh on the infernal furnace gives you nuggets)
-Added: Sceptres are now enchantable (with unbreaking and repair(thaumcraft 4))
-Change: Sceptres now will work on mobs from other mods (not all mobs, depends on how the modder made his mob, if it doesn't work with some mob that isn't from vanilla mc, don't bother reporting it to me. There's nothing I can do). 
-Added: Magmatic Centrifuge
-Added: Weeping Pod
-Added: API
-Added: Disperser actions for Bottomless Bucket, Living Soul, Sceptre of Fire Charging and Lightning, skeleton spawn eggs
-Added: SoulTNT
-Added: IC2 Integration
-Added: AppliedEnergistis Integration

v1.5.1
-Added: CraftGuide integration
-Added: Magmatic Furnace will drain lava automatically from a Volcanic Furnace placed underneath it
-Fix: Crash with Volcanic Furnace when running on a server
-Change: Blaze armour now heals slower, unless the player is on fire and will take damage if player is on water

v1.5.2
-Fix: CraftGuide integration now works as it should...