@@ -65,3 +65,7 @@ v1.5.1
 
 v1.5.2
 -Fix: CraftGuide integration now works as it should...
+-Change: Nether Crops can't be bonemealed anymore. Only living souls will work.
+-Change: Breaking a Wither Shrub on its last growth stage has a (tiny) chance of dropping two seeds instead of just one
+-Change: Make all the skulls grown by the Wither Shrub drop instantly by right clicking it.
+-Added: Thaumcraft golems can now harvest the skulls
